ST-006: fix the biography image overlap quote issue

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ header {
 #tribute-quote {
   margin: 150px 20% 100px;
   padding: 20px 0;
-  height: 400px;
   font-size: 4em;
   font-family: Georgia, serif;
   color: rgba(169,103,23,1);
@@ -105,7 +104,6 @@ header {
 @media (max-width: 767px) {
   #tribute-quote {
     margin: 30px 10% 0;
-    height: 300px;
     font-size: 3em;
   }
 }
